--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
   <script src="build/js/zone.js"></script>
   <!-- the bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase.js"></script>
 </body>
 
 </html>
