--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,10 @@
   <!-- the bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase.js"></script>
+
+  <script async defer
+     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBst0zq0LAxMY09cHkYffDgfkr_jDt68Sg">
+   </script>
 </body>
 
 </html>
