--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,10 @@
   <script async defer
      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBst0zq0LAxMY09cHkYffDgfkr_jDt68Sg">
    </script>
+
+   <script src="lib/geolib.min.js">
+
+   </script>
 </body>
 
 </html>
