--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,30 +1,4 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Home
-    </ion-title>
-    <button menuToggle><ion-icon name="menu"></ion-icon></button>
-  </ion-navbar>
-</ion-header>
-
-<ion-content>
-  <ion-card *ngFor="let message of messagesList">
-    <div class="box-address">
-      {{message.address}}
-    </div>
-
-    <div class="box-img">
-      <img [src]="message.map" alt="" />
-      <button fab fab-right fab-top class="fab-map" (click)="openRoute(message)"><ion-icon name="navigate"></ion-icon></button>
-    </div>
-
-    <ion-card-content>
-      <h2>{{message.senderName}}</h2>
-      <p>
-        Você está a {{message.distance}}km do local desta mensagem
-      </p>
-      <button primary clear block (click)="openMessage(message)">Ler</button>
-    </ion-card-content>
-
-  </ion-card>
-</ion-content>
+<ion-tabs>
+  <ion-tab tabTitle="Novas" [root]="messageNew"></ion-tab>
+  <ion-tab tabTitle="Lidas" [root]="messageRead"></ion-tab>
+</ion-tabs>
